--- a/snaw-frontend/package.json
+++ b/snaw-frontend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tech-demo",
+  "name": "snaw-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
