--- a/snaw-frontend/package.json
+++ b/snaw-frontend/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-vis": "^1.11.7",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
