--- a/snaw-frontend/package.json
+++ b/snaw-frontend/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.0",
     "react-router-dom": "^5.1.2",
+    "recharts": "^2.0.0-beta.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
