--- a/snaw-frontend/package.json
+++ b/snaw-frontend/package.json
@@ -53,6 +53,7 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.0",
+    "react-promise-tracker": "^2.0.5",
     "react-router-dom": "^5.1.2",
     "recharts": "^2.0.0-beta.1",
     "resolve": "1.12.0",
@@ -60,7 +61,7 @@
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
-    "terser-webpack-plugin": "1.4.1",
+    "terser-webpack-plugin": "^2.3.4",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
     "webpack": "4.41.0",
